--- a/templates/home.html
+++ b/templates/home.html
@@ -14,9 +14,13 @@ proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
 <h1>India Map</h1>
 
-<div class="output_html rendered_html output_subarea output_execute_result">
+
+{% include 'map_plot.html' %}
+<!-- <div class="output_html rendered_html output_subarea output_execute_result">
   <iframe src="about:blank" width="800" height="950"style="border:none !important;" data-html={{ iframe_map }} onload="this.contentDocument.open();this.contentDocument.write(atob(this.getAttribute('data-html')));this.contentDocument.close();" "allowfullscreen" "webkitallowfullscreen" "mozallowfullscreen"></iframe>
-</div>
+</div> -->
+
+
 
 <h1>What is FRT Systems</h1>
 
