--- a/templates/foot.html
+++ b/templates/foot.html
@@ -1,10 +1,13 @@
-<script type="text/javascript">
-  
-  fetch('/get_frts/').then(function(json) {
-    // ...
-    map.render(json)
-  })
-
-</script>
+  <!-- Bootstrap core JS-->
+  <script src="{{ url_for('static', filename='node_modules/jquery/dist/jquery.min.js') }}"></script>
+  <script src="{{ url_for('static', filename='node_modules/bootstrap/dist/js/bootstrap.bundle.min.js') }}"></script>
+  <!-- Third party plugin JS-->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
+  <!-- Contact form JS-->
+  <!-- <script src="assets/mail/jqBootstrapValidation.js"></script> -->
+  <!-- <script src="assets/mail/contact_me.js"></script> -->
+  <!-- Core theme JS-->
+  <script src="{{ url_for('static', filename='js/scripts.js') }}"></script>
 </body>
+
 </html>
