--- a/templates/home.html
+++ b/templates/home.html
@@ -1,40 +1,147 @@
 {% include "head.html" %}
 {% block body %}
+{% include "top_nav.html" %}
 <!-- DO NOT ADD ANYTHING ABOVE THIS LINE -->
 
-<h1>What is FRT Systems</h1>
 
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+<!-- Masthead-->
+<header class="masthead">
+  <div class="container">
+    <div class="masthead-subheading">Project Panoptic</div>
+    <div class="masthead-heading text-uppercase">Tracking FRT Systems in India</div>
+    <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">What are FRT Systems?</a>
+  </div>
+</header>
+
+<!-- SECTIONS -->
+<section class="page-section" id="services">
+  <div class="container">
+    <div class="text-center">
+      <h2 class="section-heading text-uppercase">What are FRT Systems?</h2>
+      <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+      consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+      cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+      proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h3>
+    </div>
+  </div>
+</section>
 
 
-<h1>India Map</h1>
+<section class="page-section" id="services">
+  <div class="container">
+    <div class="text-center">
+      <h2 class="section-heading text-uppercase">FRT Systems in India</h2>
+    </div>
+    <div class="row text-center">
+      <div class="col-md-4">
+        <span class="fa-stack fa-4x">
+          <span>54</span>
+        </span>
+        <h4 class="my-3">Total FRT Systems</h4>
+        <p class="text-muted">lorem impsum</p>
+      </div>
+      <div class="col-md-4">
+        <span class="fa-stack fa-4x">
+          <!-- <i class="fas fa-circle fa-stack-2x text-primary"></i> -->
+          <span>16</span>
+        </span>
+        <h4 class="my-3">National FRT Systems</h4>
+        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+      </div>
+      <div class="col-md-4">
+        <span class="fa-stack fa-4x">
+          <span>38</span>
+        </span>
+        <h4 class="my-3">State-wise FRT Systems</h4>
+        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+      </div>
+    </div>
+    <div class="row text-center">
+      <div class="output_html rendered_html output_subarea output_execute_result">
+        <!-- <div class="embed-responsive embed-responsive-16by9"> -->
+          <iframe src="about:blank" width="800" height="950" style="border:none !important;" data-html={{ iframe_map }} onload="this.contentDocument.open();this.contentDocument.write(atob(this.getAttribute('data-html')));this.contentDocument.close();" "allowfullscreen" "webkitallowfullscreen" "mozallowfullscreen"></iframe>
+        <!-- </div> -->
+      </div>
+    </div>
+  </div>
+</section>
 
-<div class="output_html rendered_html output_subarea output_execute_result">
-  <iframe src="about:blank" width="800" height="950"style="border:none !important;" data-html={{ iframe_map }} onload="this.contentDocument.open();this.contentDocument.write(atob(this.getAttribute('data-html')));this.contentDocument.close();" "allowfullscreen" "webkitallowfullscreen" "mozallowfullscreen"></iframe>
-</div>
 
-<h1>What is FRT Systems</h1>
+<!-- Contact-->
+<section class="page-section" id="contact">
+  <div class="container">
+    <div class="text-center">
+      <h2 class="section-heading text-uppercase">Submit an FRT</h2>
+      <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+    </div>
+    <!-- <form id="contactForm" name="sentMessage" novalidate="novalidate">
+      <div class="row align-items-stretch mb-5">
+        <div class="col-md-6">
+          <div class="form-group">
+            <input class="form-control" id="name" type="text" placeholder="Your Name *" required="required" data-validation-required-message="Please enter your name." />
+            <p class="help-block text-danger"></p>
+          </div>
+          <div class="form-group">
+            <input class="form-control" id="email" type="email" placeholder="Your Email *" required="required" data-validation-required-message="Please enter your email address." />
+            <p class="help-block text-danger"></p>
+          </div>
+          <div class="form-group mb-md-0">
+            <input class="form-control" id="phone" type="tel" placeholder="Your Phone *" required="required" data-validation-required-message="Please enter your phone number." />
+            <p class="help-block text-danger"></p>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="form-group form-group-textarea mb-md-0">
+            <textarea class="form-control" id="message" placeholder="Your Message *" required="required" data-validation-required-message="Please enter a message."></textarea>
+            <p class="help-block text-danger"></p>
+          </div>
+        </div>
+      </div>
+      <div class="text-center">
+        <div id="success"></div>
+        <button class="btn btn-primary btn-xl text-uppercase" id="sendMessageButton" type="submit">Send Message</button>
+      </div>
+    </form> -->
+    <embed src="https://blocksurvey.io/survey/1PfQfn62JSDjjyK4nuHoY5t21wKeuocLLm/9999d60d-06bb-4737-9754-c42be1f7e630"  width="640" height="1759">
+  </div>
+</section>
 
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+<section class="page-section" id="case-studies">
+  <div class="container">
+    <div class="text-center">
+      <h2 class="section-heading text-uppercase">Case Studies</h2>
+    </div>
+    <div class="text-center">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+      consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+      cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+      proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    </div>
+    <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="/case-studies">View Case Studies</a>
+  </div>
+</section>
 
-<h1>What is FRT Systems</h1>
 
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+<section class="page-section" id="case-studies">
+  <div class="container">
+    <div class="text-center">
+      <h2 class="section-heading text-uppercase">RTIs</h2>
+    </div>
+    <div class="text-center">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+      consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+      cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+      proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    </div>
+    <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="/rtis">View RTIs</a>
+  </div>
+</section>
 
 <!-- DO NOT ADD ANYTHING BELOW THIS LINE -->
 {% endblock %}
