--- a/templates/home.html
+++ b/templates/home.html
@@ -14,8 +14,33 @@ proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
 <h1>India Map</h1>
 
+<style>
+  .container {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  padding-top: 150%; /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
+}
 
-{% include 'map_plot.html' %}
+/* Then style the iframe to fit in the container div with full height and width */
+.responsive-iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+}
+</style>
+
+<div class="container">
+  <iframe class="responsive-iframe", src="/map" width="600" height="700" style="border:none !important;"></iframe>
+</div>
+<!-- {{ iframe_map|safe }} -->
+
+
+<!-- {% include 'map_plot.html' %} -->
 <!-- <div class="output_html rendered_html output_subarea output_execute_result">
   <iframe src="about:blank" width="800" height="950"style="border:none !important;" data-html={{ iframe_map }} onload="this.contentDocument.open();this.contentDocument.write(atob(this.getAttribute('data-html')));this.contentDocument.close();" "allowfullscreen" "webkitallowfullscreen" "mozallowfullscreen"></iframe>
 </div> -->
