--- a/templates/home.html
+++ b/templates/home.html
@@ -1,20 +1,29 @@
 {% include "head.html" %}
 {% block body %}
 {% include "top_nav.html" %}
+<!--
+  Sections on this page
+
+  #home
+  #frt-systems
+  #submit-frt
+  #case-studies
+  #about
+-->
 <!-- DO NOT ADD ANYTHING ABOVE THIS LINE -->
 
 
 <!-- Masthead-->
-<header class="masthead">
+<header class="masthead" class="page-section" id="home">
   <div class="container">
     <div class="masthead-subheading">Project Panoptic</div>
     <div class="masthead-heading text-uppercase">Tracking FRT Systems in India</div>
-    <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">What are FRT Systems?</a>
+    <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#frt-systems">What are FRT Systems?</a>
   </div>
 </header>
 
-<!-- SECTIONS -->
-<section class="page-section" id="services">
+<!-- FRT Systems -->
+<section class="page-section" id="frt-systems">
   <div class="container">
     <div class="text-center">
       <h2 class="section-heading text-uppercase">What are FRT Systems?</h2>
@@ -28,8 +37,7 @@
   </div>
 </section>
 
-
-<section class="page-section" id="services">
+<section class="page-section" id="#">
   <div class="container">
     <div class="text-center">
       <h2 class="section-heading text-uppercase">FRT Systems in India</h2>
@@ -68,46 +76,20 @@
   </div>
 </section>
 
-
-<!-- Contact-->
-<section class="page-section" id="contact">
+<!-- Submit an FRT -->
+<section class="page-section" id="submit-frt">
   <div class="container">
     <div class="text-center">
       <h2 class="section-heading text-uppercase">Submit an FRT</h2>
       <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
     </div>
-    <!-- <form id="contactForm" name="sentMessage" novalidate="novalidate">
-      <div class="row align-items-stretch mb-5">
-        <div class="col-md-6">
-          <div class="form-group">
-            <input class="form-control" id="name" type="text" placeholder="Your Name *" required="required" data-validation-required-message="Please enter your name." />
-            <p class="help-block text-danger"></p>
-          </div>
-          <div class="form-group">
-            <input class="form-control" id="email" type="email" placeholder="Your Email *" required="required" data-validation-required-message="Please enter your email address." />
-            <p class="help-block text-danger"></p>
-          </div>
-          <div class="form-group mb-md-0">
-            <input class="form-control" id="phone" type="tel" placeholder="Your Phone *" required="required" data-validation-required-message="Please enter your phone number." />
-            <p class="help-block text-danger"></p>
-          </div>
-        </div>
-        <div class="col-md-6">
-          <div class="form-group form-group-textarea mb-md-0">
-            <textarea class="form-control" id="message" placeholder="Your Message *" required="required" data-validation-required-message="Please enter a message."></textarea>
-            <p class="help-block text-danger"></p>
-          </div>
-        </div>
-      </div>
-      <div class="text-center">
-        <div id="success"></div>
-        <button class="btn btn-primary btn-xl text-uppercase" id="sendMessageButton" type="submit">Send Message</button>
-      </div>
-    </form> -->
-    <embed src="https://blocksurvey.io/survey/1PfQfn62JSDjjyK4nuHoY5t21wKeuocLLm/9999d60d-06bb-4737-9754-c42be1f7e630"  width="640" height="1759">
+    <div class="text-center">
+      <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="/submit_frt">Submit an FRT</a>
+    </div>
   </div>
 </section>
 
+<!-- Case Studies -->
 <section class="page-section" id="case-studies">
   <div class="container">
     <div class="text-center">
@@ -119,17 +101,18 @@
       quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
       consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
       cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-      proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </p>
+      <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="/case_studies">View Case Studies</a>
     </div>
-    <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="/case-studies">View Case Studies</a>
   </div>
 </section>
 
-
-<section class="page-section" id="case-studies">
+<!-- About -->
+<section class="page-section" id="about">
   <div class="container">
     <div class="text-center">
-      <h2 class="section-heading text-uppercase">RTIs</h2>
+      <h2 class="section-heading text-uppercase">About Us</h2>
     </div>
     <div class="text-center">
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -137,9 +120,10 @@
       quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
       consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
       cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-      proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </p>
+      <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="/about">Know More</a>
     </div>
-    <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="/rtis">View RTIs</a>
   </div>
 </section>
 
