--- a/templates/top_nav.html
+++ b/templates/top_nav.html
@@ -1,17 +1,18 @@
 <!-- Navigation-->
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
   <div class="container">
-    <a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="assets/img/navbar-logo.svg" alt="" /></a>
+    <a class="navbar-brand js-scroll-trigger" href="#home">
+      Panoptic
+    </a>
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
       Menu
       <i class="fas fa-bars ml-1"></i>
     </button>
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav text-uppercase ml-auto">
-        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#map">Home</a></li>
-        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#services">Submit an FRT</a></li>
-        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#portfolio">Case Studies</a></li>
-        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#team">RTIs</a></li>
+        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#frt-systems">FRT Systems</a></li>
+        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#submit-frt">Submit an FRT</a></li>
+        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#case-studies">Case Studies</a></li>
         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
       </ul>
     </div>
