--- a/templates/home.html
+++ b/templates/home.html
@@ -29,8 +29,8 @@ proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
   left: 0;
   bottom: 0;
   right: 0;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
 }
 </style>
 
