updated home page + css

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -5098,7 +5098,29 @@ a.badge-dark:focus, a.badge-dark.focus {
   border-left-width: 1px;
 }
 
+
+/* Folium India map css */
+.custom-container {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  padding-top: 150%; /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
+}
+
+/* Then style the iframe to fit in the container div with full height and width */
+.folium-iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100vw;
+  height: 70vh;
+}
+
+
 @media (min-width: 576px) {
+
   .list-group-horizontal-sm {
     flex-direction: row;
   }
@@ -5123,6 +5145,8 @@ a.badge-dark:focus, a.badge-dark.focus {
   }
 }
 @media (min-width: 768px) {
+  .folium-iframe { width: 50vw; }
+
   .list-group-horizontal-md {
     flex-direction: row;
   }
@@ -5171,6 +5195,7 @@ a.badge-dark:focus, a.badge-dark.focus {
   }
 }
 @media (min-width: 1200px) {
+
   .list-group-horizontal-xl {
     flex-direction: row;
   }
