updated home page content & installation instructions

--- a/templates/home.html
+++ b/templates/home.html
@@ -34,8 +34,8 @@
         <li>Detection of face in an image and/or video. For instance, phone cameras apply this feature when they auto-focus on a face while capturing a photo.</li>
         <li>Extraction of particular features from the detected image.</li>
         <li>Recognition which results in either identification or verification of an individual.</li>
-        <li>Identification happens when FRT is used to identify an individual from a pool of many people. This kind of 1:many FRT based identification is typically used for security and surveillance purposes. Verification, on the other hand, occurs when an image is compared to another image from an existing database in order to verify that the individual is who he/she claims to be, i.e., authentication of identity on a 1:1 basis.</li>
       </ul>
+      <p>Identification happens when FRT is used to identify an individual from a pool of many people. This kind of 1:many FRT based identification is typically used for security and surveillance purposes. Verification, on the other hand, occurs when an image is compared to another image from an existing database in order to verify that the individual is who he/she claims to be, i.e., authentication of identity on a 1:1 basis.</p>
     </div>
   </div>
 </section>
