--- a/templates/case_studies.html
+++ b/templates/case_studies.html
@@ -1,6 +1,6 @@
 {% include "head.html" %}
 {% block body %}
-{% include "page_nav.html" %}
+{% include "top_nav.html" %}
 <!-- DO NOT ADD ANYTHING ABOVE THIS LINE -->
 
 <section class="page-section" id="frt-systems">
