--- a/templates/home.html
+++ b/templates/home.html
@@ -13,67 +13,14 @@
 <!-- DO NOT ADD ANYTHING ABOVE THIS LINE -->
 
 
-<!-- Masthead-->
-<header class="masthead" class="page-section" id="home">
-  <div class="container">
-    <div class="masthead-subheading">Project Panoptic</div>
-    <div class="masthead-heading text-uppercase">Tracking FRT Systems in India</div>
-    <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#frt-systems">What are FRT Systems?</a>
-  </div>
-</header>
-
-<!-- FRT Systems -->
-<section class="page-section" id="frt-systems">
-  <div class="container">
-    <div class="text-center">
-      <h2 class="section-heading text-uppercase">What are FRT Systems?</h2>
-    </div>
-    <div class="row">
-      <p>As Smriti Parsheera explains in her recent paper, the process of FRT can be summarised in the following steps:</p>
-      <ul>
-        <li>Detection of face in an image and/or video. For instance, phone cameras apply this feature when they auto-focus on a face while capturing a photo.</li>
-        <li>Extraction of particular features from the detected image.</li>
-        <li>Recognition which results in either identification or verification of an individual.</li>
-      </ul>
-      <p>Identification happens when FRT is used to identify an individual from a pool of many people. This kind of 1:many FRT based identification is typically used for security and surveillance purposes. Verification, on the other hand, occurs when an image is compared to another image from an existing database in order to verify that the individual is who he/she claims to be, i.e., authentication of identity on a 1:1 basis.</p>    
-    </div>
-  </div>
-</section>
-
+<!-- Map + Data -->
 <section class="page-section" id="#">
-  <div class="container">
-    <div class="text-center">
-      <h2 class="section-heading text-uppercase">FRT Systems in India</h2>
-    </div>
-    <div class="row text-center">
-      <div class="col-md-4">
-        <span class="fa-stack fa-4x">
-          <span>54</span>
-        </span>
-        <h4 class="my-3">Total FRT Systems</h4>
-        <p class="text-muted">lorem impsum</p>
-      </div>
-      <div class="col-md-4">
-        <span class="fa-stack fa-4x">
-          <!-- <i class="fas fa-circle fa-stack-2x text-primary"></i> -->
-          <span>16</span>
-        </span>
-        <h4 class="my-3">National FRT Systems</h4>
-        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
-      </div>
-      <div class="col-md-4">
-        <span class="fa-stack fa-4x">
-          <span>38</span>
-        </span>
-        <h4 class="my-3">State-wise FRT Systems</h4>
-        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
-      </div>
-    </div>
+  <div class="container-fluid">
     <div class="row text-center mt-4">
-      <div class="col-md-6">
+      <div class="col-md-8">
         {{ iframe | safe }}
       </div>
-      <div class="col-md-6">
+      <div class="col-md-4">
         <table class="table table-striped">
           <thead>
             <tr>
@@ -101,64 +48,55 @@
   </div>
 </section>
 
-<!-- Submit an FRT -->
-<section class="page-section" id="submit-frt">
+<section class="page-section" id="frt-systems">
   <div class="container">
     <div class="text-center">
-      <h2 class="section-heading text-uppercase">Submit an FRT</h2>
-      <div class="row text-center">
-        <div class="col-md-4"></div>
-        <div class="col-md-4">
-          <span class="fa-stack fa-4x">
-            <span>34</span>
-          </span>
-          <p class="text-muted">
-            FRTs have been submitted by people like you <br />
-            Help us identify FRT systems in your vicinity
-          </p>
-        </div>
-        <div class="col-md-4"></div>
+      <h2 class="section-heading text-uppercase">FRT Systems in India</h2>
+    </div>
+    <div class="row text-center">
+      <div class="col-md-4">
+        <span class="fa-stack fa-4x">
+          <span>54</span>
+        </span>
+        <h4 class="my-3">Total FRT Systems</h4>
+        <p class="text-muted">lorem impsum</p>
+      </div>
+      <div class="col-md-4">
+        <span class="fa-stack fa-4x">
+          <span>16</span>
+        </span>
+        <h4 class="my-3">National FRT Systems</h4>
+        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+      </div>
+      <div class="col-md-4">
+        <span class="fa-stack fa-4x">
+          <span>38</span>
+        </span>
+        <h4 class="my-3">State-wise FRT Systems</h4>
+        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
       </div>
     </div>
+  </div>
+</section>
+
+<!-- FRT Systems -->
+<section class="page-section" id="frt-systems">
+  <div class="container">
     <div class="text-center">
-      <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="/submit_frt">Submit an FRT</a>
+      <h2 class="section-heading text-uppercase">What are FRT Systems?</h2>
+    </div>
+    <div class="row">
+      <p>As Smriti Parsheera explains in her recent paper, the process of FRT can be summarised in the following steps:</p>
+      <ul>
+        <li>Detection of face in an image and/or video. For instance, phone cameras apply this feature when they auto-focus on a face while capturing a photo.</li>
+        <li>Extraction of particular features from the detected image.</li>
+        <li>Recognition which results in either identification or verification of an individual.</li>
+      </ul>
+      <p>Identification happens when FRT is used to identify an individual from a pool of many people. This kind of 1:many FRT based identification is typically used for security and surveillance purposes. Verification, on the other hand, occurs when an image is compared to another image from an existing database in order to verify that the individual is who he/she claims to be, i.e., authentication of identity on a 1:1 basis.</p>    
     </div>
   </div>
 </section>
 
-<!-- Case Studies -->
-<section class="page-section" id="case-studies">
-  <div class="container">
-    <div class="text-center">
-      <h2 class="section-heading text-uppercase">Case Studies</h2>
-    </div>
-    <div class="text-center">
-      <p>
-        Case studies will be in an explainer format providing context to the system with the help of a timeline
-      </p>
-      <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="/case_studies">View Case Studies</a>
-    </div>
-  </div>
-</section>
-
-<!-- About -->
-<section class="page-section" id="about">
-  <div class="container">
-    <div class="text-center">
-      <h2 class="section-heading text-uppercase">About Us</h2>
-    </div>
-    <div class="text-center">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-      consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-      cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-      proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-      </p>
-      <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="/about">Know More</a>
-    </div>
-  </div>
-</section>
 
 <!-- DO NOT ADD ANYTHING BELOW THIS LINE -->
 {% endblock %}
