--- a/templates/top_nav.html
+++ b/templates/top_nav.html
@@ -1,7 +1,7 @@
 <!-- Navigation-->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
   <div class="container-fluid">
-    <a class="navbar-brand js-scroll-trigger" href="#home">
+    <a class="navbar-brand js-scroll-trigger" href="/">
       Panoptic
     </a>
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
