removed columns that are not requird

--- a/templates/home.html
+++ b/templates/home.html
@@ -29,12 +29,10 @@
             </tr>
           </thead>
           <tbody>
-          {% for state in data['states'] %}
             <tr>
-              <th scope="row"><a href="/state/{{ state['st_nm'] }}">{{ state['st_nm'] }}</a></th>
-              <td class="text-right">{{ state['Count of FRT Systems'] }}</td>
+              <th>Karnataka</th>
+              <td>23</td>
             </tr>
-          {% endfor %}
           </tbody>
         </table>
       </div>
