footer details / links

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -10504,7 +10504,9 @@ section#contact form#contactForm :-ms-input-placeholder {
 }
 
 .footer {
+  padding-top: 20px;
+  border-top: 1px solid #eee;
   text-align: center;
-  font-size: 0.9rem;
+  font-size: 0.7rem;
   font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
