abs paths for url

--- a/templates/top_nav.html
+++ b/templates/top_nav.html
@@ -10,10 +10,10 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav text-uppercase ml-auto">
-        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/#frt-systems">FRT Systems</a></li>
-        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/submit_frt">Submit an FRT</a></li>
-        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/case_studies">Case Studies</a></li>
-        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/about">About</a></li>
+        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{{ url_for('root') }}/#frt-systems">FRT Systems</a></li>
+        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{{ url_for('submit_frt') }}">Submit an FRT</a></li>
+        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{{ url_for('case_studies') }}">Case Studies</a></li>
+        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{{ url_for('about') }}">About</a></li>
       </ul>
     </div>
   </div>
