--- a/templates/foot.html
+++ b/templates/foot.html
@@ -2,7 +2,7 @@
     <div class="row">
       <div class="col-2">
         <ul class="list-group list-group-flush">
-          <li class="list-group-item"><a href="/">Home</a></li>
+          <li class="list-group-item"><a href="{{ url_for('root') }}">Home</a></li>
           <li class="list-group-item"><a href="{{ url_for('submit_frt') }}">Submit an FRT</a></li>
           <li class="list-group-item"><a href="{{ url_for('case_studies') }}">Case Studies</a></li>
           <li class="list-group-item"><a href="{{ url_for('about') }}">About</a></li>
