--- a/templates/top_nav.html
+++ b/templates/top_nav.html
@@ -1,7 +1,7 @@
 <!-- Navigation-->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
   <div class="container-fluid">
-    <a class="navbar-brand js-scroll-trigger" href="/">
+    <a class="navbar-brand js-scroll-trigger" href="{{ url_for('root') }}">
       Panoptic
     </a>
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -10,7 +10,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav text-uppercase ml-auto">
-        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{{ url_for('root') }}/#frt-systems">FRT Systems</a></li>
+        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{{ url_for('root') }}#frt-systems">FRT Systems</a></li>
         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{{ url_for('submit_frt') }}">Submit an FRT</a></li>
         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{{ url_for('case_studies') }}">Case Studies</a></li>
         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{{ url_for('about') }}">About</a></li>
