--- a/templates/home.html
+++ b/templates/home.html
@@ -20,7 +20,7 @@
       <div class="col-md-8 col-sm-12">
         {{ data['iframe'] | safe }}
       </div>
-      <div class="col-md-4 col-sm-12 overflow-auto" style="height: 100vh;">
+      <div class="col-md-4 col-sm-12 overflow-auto" style="height: 70vh;">
         <table class="table table-striped">
           <thead>
             <tr>
@@ -54,21 +54,21 @@
           <span>{{ data['totals']['total_frts'] }}</span>
         </span>
         <h4 class="my-3">Total FRT Systems</h4>
-        <p class="text-muted">lorem impsum</p>
+        <p class="text-muted"></p>
       </div>
       <div class="col-md-4">
         <span class="fa-stack fa-4x">
           <span>{{ data['totals']['total_frts_national'] }}</span>
         </span>
         <h4 class="my-3">National FRT Systems</h4>
-        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+        <p class="text-muted"></p>
       </div>
       <div class="col-md-4">
         <span class="fa-stack fa-4x">
           <span>{{ data['totals']['total_frts_states'] }}</span>
         </span>
         <h4 class="my-3">State-wise FRT Systems</h4>
-        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+        <p class="text-muted"></p>
       </div>
     </div>
   </div>
@@ -81,13 +81,8 @@
       <h2 class="section-heading text-uppercase">What are FRT Systems?</h2>
     </div>
     <div class="row">
-      <p>As Smriti Parsheera explains in her recent paper, the process of FRT can be summarised in the following steps:</p>
-      <ul>
-        <li>Detection of face in an image and/or video. For instance, phone cameras apply this feature when they auto-focus on a face while capturing a photo.</li>
-        <li>Extraction of particular features from the detected image.</li>
-        <li>Recognition which results in either identification or verification of an individual.</li>
-      </ul>
-      <p>Identification happens when FRT is used to identify an individual from a pool of many people. This kind of 1:many FRT based identification is typically used for security and surveillance purposes. Verification, on the other hand, occurs when an image is compared to another image from an existing database in order to verify that the individual is who he/she claims to be, i.e., authentication of identity on a 1:1 basis.</p>    
+      <p> "Face recognition is a method of identifying or verifying the identity of an individual using their face. Face recognition systems can be used to identify people in photos, video, or in real-time. Face recognition systems use computer algorithms to pick out specific, distinctive details about a person’s face. These details, such as distance between the eyes or shape of the chin, are then converted into a mathematical representation and compared to data on other faces collected in a face recognition database. The data about a particular face is often called a face template and is distinct from a photograph because it’s designed to only include certain details that can be used to distinguish one face from another. <p> 
+    <p>Some face recognition systems, instead of positively identifying an unknown person, are designed to calculate a probability match score between the unknown person and specific face templates stored in the database. These systems will offer up several potential matches, ranked in order of likelihood of correct identification, instead of just returning a single result.</p>    
     </div>
   </div>
 </section>
