--- a/templates/state.html
+++ b/templates/state.html
@@ -51,10 +51,10 @@
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">{{ frt['name'] }}</h5>
-              <h6 class="card-subtitle mb-2 text-muted">Purpose: {{ state['purpose'] }}</h6>
-              <p class="card-text"></p>
-              <a href="#" class="card-link" target="_blank">RTI Replies</a>
-              <a href="{{ frt['media_source'] }}" target="_blank" class="card-link">Media Source</a>
+              <h6 class="card-subtitle mb-2 text-muted">Purpose: {{ frt['purpose'] }}</h6>
+              <p class="card-text">Report Use On: {{ frt['report_use_on'] }}</p>
+              <p class="card-text">RTI Filed On: {{ frt['rti_filed_on'].strftime('%B %Y') }}</p>
+              <a href="{{ frt['media_source'] }}" target="_blank" class="card-link">View Media Source</a>
             </div>
           </div>
         </div>
