--- a/templates/foot.html
+++ b/templates/foot.html
@@ -1,11 +1,11 @@
-  <footer class="footer">
+  <footer class="footer bg-light">
     <div class="row">
       <div class="col-2">
-        <ul class="list-group list-group-flush">
-          <li class="list-group-item"><a href="{{ url_for('root') }}">Home</a></li>
-          <li class="list-group-item"><a href="{{ url_for('submit_frt') }}">Submit an FRT</a></li>
-          <li class="list-group-item"><a href="{{ url_for('case_studies') }}">Case Studies</a></li>
-          <li class="list-group-item"><a href="{{ url_for('about') }}">About</a></li>
+        <ul class="list-group list-group-flush text-left">
+          <li class="list-group-item border-bottom-0 bg-light"><a class="text-dark" href="{{ url_for('root') }}">Home</a></li>
+          <li class="list-group-item border-bottom-0 bg-light"><a class="text-dark" href="{{ url_for('submit_frt') }}">Submit an FRT</a></li>
+          <li class="list-group-item border-bottom-0 bg-light"><a class="text-dark" href="{{ url_for('case_studies') }}">Case Studies</a></li>
+          <li class="list-group-item border-bottom-0 bg-light"><a class="text-dark" href="{{ url_for('about') }}">About</a></li>
         </ul>
       </div>
       <div class="col-8">
@@ -26,7 +26,6 @@
           <a target="_blank" href="https://twitter.com/internetfreedom"><i class="fab fa-twitter"></i></a>
           <a target="_blank" href="https://internetfreedom.in"><i class="fas fa-link"></i></a>
         </p>
-        <hr />
         <p>DataKind Bangalore</p>
         <p>
           <a target="_blank" href="https://twitter.com/DataKindBLR"><i class="fab fa-twitter"></i></a>
