--- a/templates/top_nav.html
+++ b/templates/top_nav.html
@@ -4,5 +4,17 @@
     <a class="navbar-brand js-scroll-trigger" href="{{ url_for('root') }}">
       Panoptic
     </a>
-  </div>
+  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+      Menu
+      <i class="fas fa-bars ml-1"></i>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarResponsive">
+      <ul class="navbar-nav text-uppercase ml-auto">
+        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{{ url_for('root') }}#frt-systems">FRT Systems</a></li>
+        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{{ url_for('submit_frt') }}">Submit an FRT</a></li>
+        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{{ url_for('case_studies') }}">Case Studies</a></li>
+        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{{ url_for('about') }}">About</a></li>
+      </ul>
+    </div>
+  <div>
 </nav>
