updated links + pages + removed hyperlink from map popup

--- a/templates/about.html
+++ b/templates/about.html
@@ -7,14 +7,9 @@
   <div class="container">
     <div class="text-left">
       <h2 class="section-heading text-uppercase">About Panoptic</h2>
-      
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-      consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-      cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-      proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-      </p>
+      <p>Internet Freedom Foundation’s Project Panoptic aims to bring transparency and accountability to the relevant government stakeholders involved in the deployment and implementation of facial recognition technology (FRT) projects in India.</p>
+
+      <p>This project has been successful due to the efforts of a handful of volunteers from DataKind along with IFF's team.</p>
     </div>
   </div>
 </section>
