--- a/templates/foot.html
+++ b/templates/foot.html
@@ -3,8 +3,8 @@
       <div class="col-2">
         <ul class="list-group list-group-flush text-left">
           <li class="list-group-item border-bottom-0 bg-light"><a class="text-dark" href="{{ url_for('root') }}">Home</a></li>
-          <li class="list-group-item border-bottom-0 bg-light"><a class="text-dark" href="{{ url_for('submit_frt') }}">Submit an FRT</a></li>
-          <li class="list-group-item border-bottom-0 bg-light"><a class="text-dark" href="{{ url_for('case_studies') }}">Case Studies</a></li>
+          <li class="list-group-item border-bottom-0 bg-light"><a class="text-dark" href="https://blocksurvey.io/survey/1PfQfn62JSDjjyK4nuHoY5t21wKeuocLLm/9999d60d-06bb-4737-9754-c42be1f7e630" target="_blank">Petition</a></li>
+          <li class="list-group-item border-bottom-0 bg-light"><a class="text-dark" href="https://internetfreedom.in/tag/project-panoptic/" target="_blank">Articles</a></li>
           <li class="list-group-item border-bottom-0 bg-light"><a class="text-dark" href="{{ url_for('about') }}">About</a></li>
         </ul>
       </div>
@@ -25,6 +25,7 @@
         <p>
           <a target="_blank" href="https://twitter.com/internetfreedom"><i class="fab fa-twitter"></i></a>
           <a target="_blank" href="https://internetfreedom.in"><i class="fas fa-link"></i></a>
+          <a target="_blank" href="https://forum.internetfreedom.in/"><i class="fab fa-forumbee"></i></a>
         </p>
         <p>DataKind Bangalore</p>
         <p>
