--- a/templates/top_nav.html
+++ b/templates/top_nav.html
@@ -11,8 +11,8 @@
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav text-uppercase ml-auto">
         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{{ url_for('root') }}#frt-systems">FRT Systems</a></li>
-        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{{ url_for('submit_frt') }}">Submit an FRT</a></li>
-        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{{ url_for('case_studies') }}">Case Studies</a></li>
+        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="https://blocksurvey.io/survey/1PfQfn62JSDjjyK4nuHoY5t21wKeuocLLm/9999d60d-06bb-4737-9754-c42be1f7e630" target="_blank">Petition</a></li>
+        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="https://internetfreedom.in/tag/project-panoptic/" target="_blank">Articles</a></li>
         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{{ url_for('about') }}">About</a></li>
       </ul>
     </div>
