--- a/templates/home.html
+++ b/templates/home.html
@@ -51,7 +51,7 @@
     <div class="row text-center">
       <div class="col-md-4">
         <span class="fa-stack fa-4x">
-          <span>{{ data['totals']['total_frts'] }}</span>
+          <span>{{ data['totals']['total_frts_states'] + data['totals']['total_frts_national'] }}</span>
         </span>
         <h4 class="my-3">Total FRT Systems</h4>
       </div>
